<?xml version="1.0"?>
<package format="2">
  <name>nb_subscriber</name>
  <version>0.4.0</version>
  <description>NB ROS Message Subscriber</description>
  <maintainer email="404@fdsafsd.com">NB</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
